[gd_scene load_steps=8 format=3 uid="uid://mm0fdsclihsm"]

[ext_resource type="Script" path="res://MainMenu/script/Game_Options_Countiue.gd" id="1_m4vrt"]
[ext_resource type="Texture2D" uid="uid://di2h2l8legm1e" path="res://Other_Game_Assests/daciqit-d44c803b-103e-45ce-ad46-ba0e9f669529.png" id="2_2ewwk"]
[ext_resource type="Texture2D" uid="uid://dww2m1gv0jyc0" path="res://MainMenu/ui/Exit.tres" id="2_wkmqh"]
[ext_resource type="AudioStream" uid="uid://bygwkjdfddqxy" path="res://Sounds/Sounds_Assest/SFX/mouse-click-153941.mp3" id="4_g4ire"]

[sub_resource type="Gradient" id="Gradient_3o731"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8lrtu"]
gradient = SubResource("Gradient_3o731")

[sub_resource type="SystemFont" id="SystemFont_pg1da"]
font_names = PackedStringArray("Chiller")
subpixel_positioning = 0

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m4vrt")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_8lrtu")

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Daciqit-d44c803b-103e-45Ce-ad46-ba0e9f669529" type="Sprite2D" parent="NinePatchRect/CenterContainer"]
position = Vector2(583, 309)
scale = Vector2(0.735313, 0.742222)
texture = ExtResource("2_2ewwk")

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/CenterContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="NinePatchRect/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_pg1da")
theme_override_font_sizes/font_size = 60
text = "Countiue"

[node name="VSeparator" type="VSeparator" parent="NinePatchRect/CenterContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme_override_constants/separation = 100

[node name="Button2" type="Button" parent="NinePatchRect/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_pg1da")
theme_override_font_sizes/font_size = 60
text = "New Game"

[node name="Exit" type="Sprite2D" parent="NinePatchRect/CenterContainer"]
position = Vector2(1093, 73)
scale = Vector2(5, 5)
texture = ExtResource("2_wkmqh")
metadata/_edit_group_ = true

[node name="Exit" type="Button" parent="NinePatchRect/CenterContainer/Exit"]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0)
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_g4ire")

[connection signal="pressed" from="NinePatchRect/CenterContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="NinePatchRect/CenterContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="NinePatchRect/CenterContainer/Exit/Exit" to="." method="_on_exit_pressed"]
